--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <body>
     <h1>Unity WebGL Builds</h1>
     <ul>
-        <li><a href="Build1/index.html">Build 1</a></li>
-        <li><a href="Build2/index.html">Build 2</a></li>
+        <li><a href="Lava_Challenge/index.html">Build 1</a></li>
     </ul>
 </body>
 </html>
