--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>Unity WebGL Builds</h1>
     <ul>
         <li><a href="Lava_Challenge/index.html">Build 1</a></li>
+        <li><a href="3D Essentials/index.html">Build 1</a></li>
     </ul>
 </body>
 </html>
