--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
     <h1>Unity WebGL Builds</h1>
     <ul>
-        <li><a href="Lava_Challenge/index.html">Build 1</a></li>
-        <li><a href="3D_Essentials/index.html">Build 1</a></li>
+        <li><a href="3D_Essentials/index.html">3D Essentials</a></li>
+        <li><a href="Lava_Challenge/index.html">Lava Challenge</a></li>
     </ul>
 </body>
 </html>
