--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <h1>Unity WebGL Builds</h1>
     <ul>
         <li><a href="3D_Essentials/index.html">3D Essentials</a></li>
+        <li><a href="2D_Essentials/index.html">2D Essentials</a></li>
         <li><a href="Lava_Challenge/index.html">Lava Challenge</a></li>
+        <li><a href="Pachinko_Challenge/index.html">Pachinko Challenge</a></li>
     </ul>
 </body>
 </html>
