--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <li><a href="3D_Essentials/index.html">3D Essentials</a></li>
         <li><a href="2D_Essentials/index.html">2D Essentials</a></li>
         <li><a href="Lava_Challenge/index.html">Lava Challenge</a></li>
+        <li><a href="Lava_Challenge_Programming/index.html">Lava Challenge With Programming</a></li>
         <li><a href="Pachinko_Challenge/index.html">Pachinko Challenge</a></li>
     </ul>
 </body>
