--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="Lava_Challenge/index.html">Lava Challenge</a></li>
         <li><a href="Lava_Challenge_Programming/index.html">Lava Challenge With Programming</a></li>
         <li><a href="Pachinko_Challenge/index.html">Pachinko Challenge</a></li>
+        <li><a href="Plane Prototype/index.html">Plane Challenge</a></li>
     </ul>
 </body>
 </html>
