--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li><a href="Lava_Challenge/index.html">Lava Challenge</a></li>
         <li><a href="Lava_Challenge_Programming/index.html">Lava Challenge With Programming</a></li>
         <li><a href="Pachinko_Challenge/index.html">Pachinko Challenge</a></li>
-        <li><a href="Car_Prototype/index.html">Plane Challenge</a></li>
+        <li><a href="Car_Prototype/index.html">Car Challenge</a></li>
         <li><a href="Plane_Prototype/index.html">Plane Challenge</a></li>
     </ul>
 </body>
